hphp/test/zend/good/ext/mcrypt/tests/mcrypt_list_modes.php.skipif
<?php if (!extension_loaded("mcrypt")) print "skip"; ?>