hphp/test/zend/bad/ext/phar/tests/bug46032.php.skipif
<?php if (!extension_loaded("phar")) die("skip"); ?>
<?php if (getenv('SKIP_SLOW_TESTS')) die('skip'); ?>